# TahoeOS

./: .gitignore  README.md  TODOS.md
.github/workflows/: ci.yml  smoke.yml
Firmware/: OV_Watch_V2_4_4_NoBoot.hex
Software/OV_Watch/: CMakeLists.txt
Software/OV_Watch/BSP/AHT21/: AHT21.c
Software/OV_Watch/BSP/EM7028/: HrAlgorythm.c  em70x8.c  em70x8.h
Software/OV_Watch/BSP/TOUCH/: CST816.c
Software/OV_Watch/Core/Inc/: main.h  rtc.h  stm32f4xx_it.h  usart.h
Software/OV_Watch/Core/Src/: main.c  rtc.c  stm32f4xx_it.c  usart.c
Software/OV_Watch/MDK-ARM/: OV_Watch.uvoptx  OV_Watch.uvprojx
Software/OV_Watch/Middlewares/LVGL/GUI/: lv_conf.h
Software/OV_Watch/User/Func/Inc/: AppData.h  HWDataAccess.h  user_DfuTrigger.h
Software/OV_Watch/User/Func/Src/: AppData.c  HWDataAccess.c  StrCalculate.c  user_DfuTrigger.c
Software/OV_Watch/User/GUI_App/Screens/Inc/: ui_DateTimeSetPage.h  ui_HomePage.h  ui_LockPage.h  ui_MenuPage.h  ui_NFCCardPage.h  ui_SPO2Page.h  ui_SportPage.h
Software/OV_Watch/User/GUI_App/Screens/Src/: ui_AboutPage.c  ui_ComputerPage.c  ui_DateTimeSetPage.c  ui_Game2048Page.c  ui_GameMemPage.c  ui_GameSelectPage.c  ui_HRPage.c  ui_HomePage.c  ui_LockPage.c  ui_MenuPage.c  ui_NFCCardPage.c  ui_OffTimePage.c  ui_SPO2Page.c  ui_SetPage.c  ui_SportPage.c  ui_TimerPage.c
Software/OV_Watch/User/Tasks/Inc/: user_SensUpdateTask.h  user_TasksInit.h
Software/OV_Watch/User/Tasks/Src/: user_DataSaveTask.c  user_HardwareInitTask.c  user_MessageSendTask.c  user_RunModeTasks.c  user_ScrRenewTask.c  user_SensUpdateTask.c  user_TasksInit.c
Software/OV_Watch/linker/: STM32F411CEUx_APP.ld
docs/: bringup.md  display-debug-2026-02-06.md  sensor-extension.md
lv_sim_vscode_win/user_test/GUI_App/Screens/Src/: ui_DateTimeSetPage.c  ui_Game2048Page.c  ui_GameMemPage.c  ui_HomePage.c  ui_MenuPage.c  ui_OffTimePage.c  ui_SetPage.c
lv_sim_vscode_win/user_test/lvgl/tests/src/test_cases/: test_sensor_dispatch.c
tools/: ble_proto.py  ble_proto_host_tests.sh
